# Agentic-System-Design

./: .env.example  .gitignore  README.md  justfile  main.py  pyproject.toml  requirements.txt
capstone_project/: pyproject.toml
capstone_project/my_claude/: config.py  config.yaml  main.py  mcp_config.py  mcp_servers.json
capstone_project/my_claude/agent/: factory.py  orchestrator.py  tools.py
capstone_project/my_claude/agent/mcp/: mcp_client.py
capstone_project/my_claude/agent/tools/: terminal_tools.py
capstone_project/my_claude/context/indexers/: __init__.py  chroma.py  code_parser.py  factory.py  indexer_factory.py  qdrant.py  semantic_chroma.py
capstone_project/my_claude/context/retrievers/: qdrant.py  retriever_factory.py  semantic_chroma.py
capstone_project/my_claude/llm/: factory.py
capstone_project/my_claude/memory/: session_management.py  short_term.py
capstone_project/my_claude/observability/: logger.py
docs/: Day_1_README.md  Day_2_README.md  Day_3_README.md  Day_4_README.md  Day_5_README.md  Day_6_README.md  Environment_Setup_README.md  Gmail_MCP_Setup_README.md  RAG_Evaluation_Metrics.md  Types_of_RAG.md
helpers/: doc_loader.py  load_env_vars.py  vector_store.py
week1/: bm25_demo.py  hybrid_rag.py  lexical_rag.py  semantic_rag.py  semantic_rag_ast.py  semantic_rag_tree_sitter.py  tree_sitter_demo.py
week1/datasources/: semantic_rag.py
week2/: agentic_rag_demo.py  create_dataset.py  golden_dataset.py  hyde_rag_demo.py  stm_inmemory_demo.py  test_scenarios.py
week2/agents/: __init__.py  agent_rag_agent.py  base_agent.py  google_agent.py  groq_agent.py  hyde_rag_agent.py  openai_agent.py
week2/chunkers/: __init__.py  ast_chunker.py  base_chunker.py  recursive_chunker.py  tree_sitter_chunker.py
week2/memory/: __init__.py  base_memory.py  stm_inmemory.py
week2/results/: semantic-hf-256-k4.md  summary.md
week2/runners/: __init__.py  base_runner.py  openevals_runner.py  ragas_runner.py  test_plan.py  test_planner.py
week2/vector_stores/: __init__.py  base_vector_store.py  graph_vector_store.py  hybrid_vector_store.py  lexical_vector_store.py  semantic_vector_store.py
