[project]
name = "keerthi-purswani-agentic-sd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "google-auth-oauthlib>=1.4.0",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-core>=1.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=0.3.0",
    "langsmith>=0.8.11",
    "openai>=2.41.0",
    "openevals>=0.2.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "tree-sitter-language-pack>=1.8.1",
]
